# EC463

./: .gitignore  README 2.md  README.md  intialDescription.md
Kircher Files/: Logbook_Kircher.md
SOFTWARE/: README.md
derek/: .ccsproject  .cproject  .derekLOGBOOK.md.swp  .project  derekLOGBOOK.md
derek/.launches/: hello_world.launch
derek/hello_world/: blink.c
derek/text_based/: binary.txt  core_functions.cpp  core_functions.h  core_functions.hpp  game  game.cpp  game_scenes.tsv  makefile  scenarios.h  scenarios.hpp
derek/text_based/game3/: CMakeLists.txt  core_functions.hpp  game
enclosures/: pcb_case.stl
kircher/: Logbook_Kircher.md
minigames/coin_flip/: index.html
minigames/dino_run/: package-lock.json  package.json
minigames/text_based/: core_functions.cpp  game.cpp
notes/: README_Engineering.md  README_HARDWARE.md  README_SOFTWARE.md  clientInterview9-24.md  initialDescription.md
pcb/: msp_stuff.kicad_pcb  msp_stuff.kicad_prl  msp_stuff.kicad_pro
pcb/fab_files/: msp_stuff-B_Cu.gbl  msp_stuff-B_Cu.gbr  msp_stuff-B_Mask.gbr  msp_stuff-B_Mask.gbs  msp_stuff-B_Paste.gbp  msp_stuff-B_Paste.gbr  msp_stuff-B_Silkscreen.gbo  msp_stuff-B_Silkscreen.gbr  msp_stuff-Edge_Cuts.gbr  msp_stuff-Edge_Cuts.gm1  msp_stuff-F_Cu.gbr  msp_stuff-F_Cu.gtl  msp_stuff-F_Mask.gbr  msp_stuff-F_Mask.gts  msp_stuff-F_Paste.gbr  msp_stuff-F_Paste.gtp  msp_stuff-F_Silkscreen.gbr  msp_stuff-F_Silkscreen.gto  msp_stuff-NPTH-drl_map.gbr  msp_stuff-NPTH.drl  msp_stuff-PTH-drl_map.gbr  msp_stuff-PTH.drl  msp_stuff-job.gbrjob  msp_stuff.csv
text_based/: clean  make
(+1039 files in other folders)
